# carcinogen_harmonizer

./: MANIFEST.in  README.md  README.txt  config.yaml  docs_sources.md  pyproject.toml  run_pipeline.ipynb  setup.py  streamlit_app.py
Example/: input_head.xlsx  out_head.xlsx
carcinogen_harmonizer/: __init__.py  app_utils.py  cli.py  config.py  enrich.py  io.py  normalize.py  pipeline.py  quality.py
carcinogen_harmonizer/data/: alias_map.json
carcinogen_harmonizer/sources/: __init__.py  classyfire.py  ctd.py  iarc.py  local_tables.py  pubchem.py
data/: seed.csv  seed2.csv
outputs/: carcinogens_enriched.csv  carcinogens_enriched.json  edges_carcinogen_facts.csv  edges_carcinogen_facts.json  iarc_expansion_skipped_duplicates.csv  manual_review_queue.csv  nodes_carcinogens.csv  nodes_carcinogens.json  qa_report.json  source_provenance.jsonl
src/kFDR/: __init__.py  calFDR.py  data_in.py  fold.py  join.py  pValues.py  runDemo.py  runFDR.py  runkFDR.py  smartGuess.py
src/kFDR/data/: demo_data1  demo_data2
tests/: test_app_utils_and_pipeline.py  test_normalization_and_schema.py  test_package.py  test_pubchem_client.py
tools/: refresh_alias_map.py
